updated modal look

--- a/LPCopiers/Content/Site.css
+++ b/LPCopiers/Content/Site.css
@@ -344,6 +344,14 @@ h1, h2, h3, h4, h5 {
     padding-right: 10px !important;
 }
 
+.modalHeader {
+    background-color: rgba(112, 185, 239, 0.850);
+    color: #fff;
+    font-size: 2em;
+    width: 100%;
+    font-weight: bold;
+}
+
 
 /*style switcher links*/
 #HighVisLink{
