--- a/LPCopiers/Views/Account/_ChangePasswordPartial.cshtml
+++ b/LPCopiers/Views/Account/_ChangePasswordPartial.cshtml
@@ -11,21 +11,21 @@
 
             <fieldset>
                 <legend>Change Password Form</legend>
-                <ol>
-                    <li>
+                <ul>
+                    <li class="field">
                         @Html.LabelFor(m => m.OldPassword)
-                        @Html.PasswordFor(m => m.OldPassword)
+                        @Html.PasswordFor(m => m.OldPassword, new { @class="narrow password input"})
                     </li>
                     <li>
                         @Html.LabelFor(m => m.NewPassword)
-                        @Html.PasswordFor(m => m.NewPassword)
+                        @Html.PasswordFor(m => m.NewPassword, new { @class = "narrow password input" })
                     </li>
                     <li>
                         @Html.LabelFor(m => m.ConfirmPassword)
-                        @Html.PasswordFor(m => m.ConfirmPassword)
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "narrow password input" })
                     </li>
-                </ol>
-                <input type="submit" value="Change password" />
+                </ul>
+                <input type="submit" value="Change password" class="medium secondary btn" />
             </fieldset>
         }
     </div>
