--- a/LPCopiers/Views/Account/_SetPasswordPartial.cshtml
+++ b/LPCopiers/Views/Account/_SetPasswordPartial.cshtml
@@ -14,17 +14,17 @@
 
             <fieldset>
                 <legend>Set Password Form</legend>
-                <ol>
-                    <li>
+                <ul>
+                    <li class="field">
                         @Html.LabelFor(m => m.NewPassword)
-                        @Html.PasswordFor(m => m.NewPassword)
+                        @Html.PasswordFor(m => m.NewPassword, new { @class = "narrow password input" })
                     </li>
-                    <li>
+                    <li class="field">
                         @Html.LabelFor(m => m.ConfirmPassword)
-                        @Html.PasswordFor(m => m.ConfirmPassword)
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "narrow password input" })
                     </li>
-                </ol>
-                <input type="submit" value="Set password" />
+                </ul>
+                <input type="submit" value="Set password" class="medium secondary btn" />
             </fieldset>
         }
     </div>
