--- a/LPCopiers/Views/Equipment/Edit.cshtml
+++ b/LPCopiers/Views/Equipment/Edit.cshtml
@@ -69,13 +69,9 @@
             </fieldset>
         }
 
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-
     </div>
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
