--- a/LPCopiers/Views/Home/ThankYou.cshtml
+++ b/LPCopiers/Views/Home/ThankYou.cshtml
@@ -10,3 +10,4 @@
         <p>Your @ViewBag.Request request has been received and a member of staff will contact you shortly to confirm</p>
     </div>
 </div>
+@{Html.RenderPartial("_loginModal");}
