--- a/LPCopiers/Views/Home/_ContactForm.cshtml
+++ b/LPCopiers/Views/Home/_ContactForm.cshtml
@@ -1,10 +1,5 @@
 ﻿@model LPCopiers.Models.ContactForm
 
-<script src="~/Scripts/jquery-1.8.2.min.js"></script>
-<script src="~/Scripts/globalize/globalize.js"></script>
-<script src="~/Scripts/jquery.validate.globalize.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-<script src="~/Scripts/jquery-ui-1.8.24.min.js"></script>
 
 <div class="row">
     <div class="twelve columns" >
@@ -106,10 +101,11 @@
                     </li>
 
                     <li class=" field">
-                        @Html.LabelFor(model => model.VisitDate)
+                        @Html.LabelFor(model => model.VisitDate) 
                         @*@Html.TextBoxFor(model => model.VisitDate, new { @id="visitDate", @placeholder="mm/dd/yyyy" })*@
-                        @Html.TextBoxFor(model => model.VisitDate, "{0:dd/MM/yyyy}", new { @id = "visitDate", @placeholder = "mm/dd/yyyy", @class = " narrow text input" })
+                        @Html.TextBoxFor(model => model.VisitDate, "{0:dd/MM/yyyy}", new { @id = "visitDate", placeholder = "dd/mm/yyyy", @class = " narrow text input" })
                         @Html.ValidationMessageFor(model => model.VisitDate)
+                        <p>Date must be between <strong>@DateTime.Now.AddDays(7).ToShortDateString() </strong> and <strong>@DateTime.Now.AddDays(90).ToShortDateString()</strong></p>
                     </li>
                 </ul>
                 <p>
@@ -120,25 +116,15 @@
     </div>
 </div>
 
-<script type="text/javascript">
-    $("#VisitDate").datepicker({
-        minDate: +7, maxDate: +90,
-        dateFormat: "dd/mm/yy"
-    });
 
-    //$.validator.addMethod('date', function (value, element) {
-    //    if (this.optional(element)) {
-    //        return true;
-    //    }
-    //    var ok = true;
-    //    try{
-    //        $.datepicker.parseDate('dd/MM/yyyy', value);
-    //    }
-    //    catch(err){
-    //        ok = false;
-    //    }
-    //    return ok;
-    //});
-</script>
+
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+<script src="~/Scripts/jquery-ui-1.8.24.min.js"></script>
+<script src="~/Scripts/datepicker.js"></script>
+
+
+
 
 
