--- a/LPCopiers/Views/Staff/PartsRequest.cshtml
+++ b/LPCopiers/Views/Staff/PartsRequest.cshtml
@@ -27,12 +27,12 @@
         {
             <ul>
                 <li>
-                    <label for="file">File: </label>
+                    <label for="file">Select file to upload: </label>
                 </li>
                 <li>
-                    <input type="file" name="file" value="partsUpload" id="file" accept=".xlsx"/>
+                    <input type="file" name="file" value="partsUpload" id="file" accept=".xlsx" class="medium primary btn"/>
                 </li>
-                <li><input type="submit" name="submit" value="Upload" /></li>
+                <li><input type="submit" name="submit" value="Upload" class="medium secondary btn"/></li>
             </ul>
         }
 
