--- a/LPCopiers/Views/Account/LostPassword.cshtml
+++ b/LPCopiers/Views/Account/LostPassword.cshtml
@@ -32,6 +32,6 @@
 
 
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
