--- a/LPCopiers/Views/Account/Manage.cshtml
+++ b/LPCopiers/Views/Account/Manage.cshtml
@@ -27,8 +27,7 @@
         </section>*@
     </div>
 </div>
-
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 
