--- a/LPCopiers/Views/Equipment/Create.cshtml
+++ b/LPCopiers/Views/Equipment/Create.cshtml
@@ -68,7 +68,6 @@
     </div>
 </div>
 
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
