--- a/LPCopiers/Views/Shared/_Layout.cshtml
+++ b/LPCopiers/Views/Shared/_Layout.cshtml
@@ -6,11 +6,12 @@
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
-        @Styles.Render("~/Content/gumby")
+        @Styles.Render("~/Content/gumbystyles")
         @Scripts.Render("~/bundles/modernizr")
         @Styles.Render("~/Content/css") @*Rendered last to overwrite any predefined bootstrap css*@
         <link href="~/Content/mediaQueries.css" rel="stylesheet" />
         <link href="~/Content/Accessability/standard.css" rel="stylesheet" id="styles"/>
+        @Scripts.Render("~/bundles/jquery")
         @RenderSection("HeaderScripts", required: false)
     </head>
 
@@ -30,11 +31,12 @@
 
 
 
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/globalize")
+
+        @*@Scripts.Render("~/bundles/globalize")*@
         <script src="~/Scripts/StylesheetChanger.js"></script>
         @Scripts.Render("~/bundles/gumby")
         @RenderSection("scripts", required: false)
 
     </body>
+
 </html>
