--- a/LPCopiers/Views/Shared/_WageForm.cshtml
+++ b/LPCopiers/Views/Shared/_WageForm.cshtml
@@ -35,3 +35,6 @@
         </p>
     </fieldset>
 }
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
