--- a/LPCopiers/Views/User/Index.cshtml
+++ b/LPCopiers/Views/User/Index.cshtml
@@ -29,6 +29,7 @@
                     <th>
                         @Html.DisplayNameFor(model => model.contact)
                     </th>
+                    <th>@Html.DisplayNameFor(model =>model.email)</th>
                     <th></th>
                 </tr>
             </thead>
@@ -49,6 +50,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.contact)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.email)
                     </td>
                     <td>
                         @Html.ActionLink("Edit", "Edit", new { id = item.UserId }, new { @class = "medium primary btn" }) |
